Fix minor errors in manpages
Spotted by Helge Kreutzmann.

--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -1,4 +1,4 @@
-.TH dpkg\-buildpackage 1 "2008-01-03" "Debian Project" "dpkg utilities"
+.TH dpkg\-buildpackage 1 "2008-03-14" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-buildpackage \- build binary or source packages from sources
 .
@@ -212,10 +212,10 @@ not all \fIrules\fP files and build tools will honour these variables,
 yet.
 .TP
 .B CFLAGS
-Optimization options which are passed to the debian build system and
+Optimization options which are passed to the Debian build system and
 can/should be overriden by the package build if needed (default value:
-.BR \-g\ \-O2
-, or
+.BR "\-g \-O2" ,
+or
 .BR \-g\ \-O0
 if
 .BR noopt
@@ -241,7 +241,7 @@ for C++ sources.
 .TP
 .B FFLAGS
 Same as
-.B FFLAGS
+.B CFLAGS
 for Fortran sources.
 .TP
 .B FFLAGS_APPEND
@@ -250,12 +250,12 @@ Same as
 for Fortran sources.
 .TP
 .B CPPFLAGS
-Preprocessor flags which are passed to the debian build system and
+Preprocessor flags which are passed to the Debian build system and
 can/should be overriden by the package build if needed (default:
 empty). This macro is seldom used (most build systems just use
 .B CFLAGS
 instead of
-.B CPPFLAGS).
+.BR CPPFLAGS ).
 .TP
 .B CPPFLAGS_APPEND
 Preprocessor flags appended to the preprocessor flags, which must not
