--- a/man/dpkg-checkbuilddeps.1
+++ b/man/dpkg-checkbuilddeps.1
@@ -1,4 +1,4 @@
-.TH dpkg\-checkbuilddeps 1 "2007-07-18" "Debian Project" "dpkg utilities"
+.TH dpkg\-checkbuilddeps 1 "2008-03-14" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-checkbuilddeps \- check build dependencies and conflicts
 .
@@ -29,7 +29,7 @@ be built.
 .TP
 .BI "\-c " build-conflicts-string
 Use the given build dependencies/conflicts instead of those contained in the
-debian/control file.
+\fIdebian/control\fP file.
 .TP
 .B \-h
 Show the usage message and exit.
