--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,12 @@
+2008-03-14  Guillem Jover  <guillem@debian.org>
+
+	Fix errors spotted by Helge Kreutzmann.
+
+	* dpkg-buildpackage.1: Refer to 'Debian' not 'debian'. Remove a space
+	beofre a comma. Replace FFLAGS with CFLAGS when referring to usage
+	similar to C for Fortran. Do not make bold a terminating parenthesis.
+	* dpkg-checkbuilddeps.1: Mark 'debian/contorl' file with italics.
+
 2008-03-11  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1401t4f56u.
