Dpkg::Changelog::Debian: Allow capitals in distribution/package names
* scripts/Dpkg/Changelog/Debian.pm: Fix regression by re-allowing
capitals (like UNRELEASED!) in the distribution/package name.
* scripts/t/600_Dpkg_Changelog/regressions: Add capitals in the
distribution name as part of the non-regression tests.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-14  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Changelog/Debian.pm: Fix regression by re-allowing
+	capitals (like UNRELEASED!) in the distribution/package name.
+	* scripts/t/600_Dpkg_Changelog/regressions: Add capitals in the
+	distribution name as part of the non-regression tests.
+
 2008-03-11  Ian Jackson  <ian@davenant.greenend.org.uk>,
             Guillem Jover  <guillem@debian.org>
 
