s-s-d: Use __sun instead of __sparc__ to define OSsunos

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-15  Erast Benson  <erast@gnusolaris.org>
+
+	* utils/start-stop-daemon.c: Use __sun instead of __sparc__ to
+	define OSsunos.
+
 2008-03-15  Raphael Hertzog  <hertzog@debian.org>
 
 	* debian/dpkg.prerm: Removed as it's empty.
