--- a/THANKS
+++ b/THANKS
@@ -44,6 +44,7 @@ David Lopez Moreno <david.lopez.moreno@hispalinux.es>
 Denis Barbier <barbier@debian.org>
 Don Armstrong <don@debian.org>
 Eddy Petrișor <eddy.petrisor@gmail.com>
+Erast Benson <erast@gnusolaris.org>
 Erick Branderhorst <branderhorst@heel.fgg.eur.nl>
 Flavio Stanchina <flavio@stanchina.net>
 Frank S. Thomas <frank@thomas-alfeld.de>
