s-s-d: Move 'return' inside preprocessor conditionals
So that it does not just return on non-handled OSes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-03-15  Erast Benson  <erast@gnusolaris.org>
 
+	* utils/start-stop-daemon.c (check): Move 'return' inside preprocessor
+	conditionals, so that it does not just return on non-handled OSes.
+
+2008-03-15  Erast Benson  <erast@gnusolaris.org>
+
 	* utils/start-stop-daemon.c: Use __sun instead of __sparc__ to
 	define OSsunos.
 
