Remove debian/dpkg.prerm
* debian/dpkg.prerm: Removed as it's empty.
* Makefile.am: Remove debian/dpkg.prerm from EXTRA_DIST.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-15  Raphael Hertzog  <hertzog@debian.org>
+
+	* debian/dpkg.prerm: Removed as it's empty.
+	* Makefile.am: Remove debian/dpkg.prerm from EXTRA_DIST.
+
 2008-03-14  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Changelog/Debian.pm: Fix regression by re-allowing
