Allow compilation with --disable-nls on systems without libintl.h
This is being triggered when a non glibc claims to be glibc.
Closes: #465420

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-16  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac (AC_CHECK_HEADERS): Add 'libintl.h'.
+	* lib/gettext.h [!ENABLE_NLS]: Use HAVE_LIBINTL_H instead of
+	'(__GLIBC__ >= 2)'.
+
 2008-03-15  Erast Benson  <erast@gnusolaris.org>
 
 	* utils/start-stop-daemon.c (check): Move 'return' inside preprocessor
