--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-03-16  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs/Objdump.pm: Add "objid" property to
+	symbols and fake "soname" property with the basename of the
+	object's filename if the object has no official SONAME.
+	* scripts/dpkg-shlibdeps.pl: Add some more debugging messages.
+	* scripts/dpkg-shlibdeps.pl: Also count usage of alternate sonames
+	for symbols found in symbols files.
+
 2008-03-16  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac (AC_CHECK_HEADERS): Add 'libintl.h'.
