Allow patches in wig&pen format to remove files
* scripts/Dpkg/Source/Package/V2_0.pm: Use -E option of patch
to apply patches so that empty files are removed.
* man/dpkg-source.1: Update manual page accordingly.

--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -328,7 +328,7 @@ any pre-existing \fBdebian\fP directory).
 .PP
 All patches in \fBdebian/patches\fP matching the perl regular expression
 \fB[\\w\-]+\fP are then applied in alphabetical order. The timestamp of
-patched files are reset to the extraction time. The patches can't remove
+patched files are reset to the extraction time. The patches can remove
 files.
 .PP
 .B Building
