Continue German scripts translation and fix minor errors noticed

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-18  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 356t0f127u.
+
 2008-03-09 Robert Luberda <robert@debian.org>
 
 	* pl.po: Updated to 490t.
