--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-01-21 08:25+0200\n"
-"PO-Revision-Date: 2008-02-16 17:08+0100\n"
+"PO-Revision-Date: 2008-03-18 21:16+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -523,7 +523,7 @@ msgstr ""
 "  -e<Betreuer>             überschreibe den Wert von »maintainer« im\n"
 "                           Changelog.\n"
 "  -u<uploadDateiVerz>      Verzeichnis mit Dateien (standardmäßig »..«).\n"
-"  -si (voreingestellt)     Quellen enthalten Orig falls neues Upstream.\n"
+"  -si (voreingestellt)     Quellen enthalten Orig. falls neues Upstream.\n"
 "  -sa                      Quelle enthält Originalquellen.\n"
 "  -sd                      Quelle ist nur Diff und .dsc.\n"
 "  -q                       ruhig - keine Informationsmeldungen auf Stderr.\n"
@@ -1585,7 +1585,7 @@ msgstr "-b benötigt ein Verzeichnis"
 
 #: scripts/dpkg-source.pl:285
 msgid "-b takes at most a directory and an orig source argument"
-msgstr "-b nimmt höchstens ein Verzeichnis und eine Originalqulle als Argument"
+msgstr "-b nimmt höchstens ein Verzeichnis und eine Originalquelle als Argument"
 
 #: scripts/dpkg-source.pl:288
 #, perl-format
@@ -1614,7 +1614,7 @@ msgstr "kann Quellpaketnamen nicht bestimmen!"
 #: scripts/dpkg-source.pl:431
 #, perl-format
 msgid "packed orig `%s' exists but is not a plain file"
-msgstr ""
+msgstr "gepackte orig. »%s« existiert, ist aber keine einfache Datei"
 
 #: scripts/dpkg-source.pl:436
 #, perl-format
@@ -1632,6 +1632,8 @@ msgid ""
 "orig argument is unpacked but source handling style -s%s calls for packed (."
 "orig.tar.<ext>)"
 msgstr ""
+"Orig. Argument ist entpackt, aber Quellenhandhabungstil -s%s bittet um "
+"gepackt (.orig.tar.<endung>)"
 
 #: scripts/dpkg-source.pl:459
 #, perl-format
@@ -1639,6 +1641,8 @@ msgid ""
 "orig argument is packed but source handling style -s%s calls for unpacked (."
 "orig/)"
 msgstr ""
+"Orig. Argument ist gepackt, aber Quellenhandhabungstil -s%s bittet um "
+"entpackt (.orig/)"
 
 #: scripts/dpkg-source.pl:468
 #, perl-format
@@ -1646,11 +1650,13 @@ msgid ""
 "orig argument is empty (means no orig, no diff) but source handling style -s%"
 "s wants something"
 msgstr ""
+"Orig. Argument ist leer (bedeutet kein Orig., kein Diff), aber "
+"Quellenhandhabungstil -s%s bittet erwartet etwas"
 
 #: scripts/dpkg-source.pl:480
 #, perl-format
 msgid "unpacked orig `%s' exists but is not a directory"
-msgstr "entpacktes Original »%s« existiert ist aber kein Verzeichnis"
+msgstr "entpacktes Orig. »%s« existiert ist aber kein Verzeichnis"
 
 #: scripts/dpkg-source.pl:484
 #, perl-format
@@ -1681,7 +1687,7 @@ msgid ""
 "tarfile `%s' already exists, not overwriting, giving up; use -sU or -sR to "
 "override"
 msgstr ""
-"Tardaatei »%s« existiert bereits, überschreibe nicht und gebe auf; verwenden "
+"Tardatei »%s« existiert bereits, überschreibe nicht und gebe auf; verwenden "
 "Sie -sU oder -sR zum Erzwingen"
 
 #: scripts/dpkg-source.pl:535
@@ -1894,7 +1900,7 @@ msgstr ""
 
 #: scripts/dpkg-source.pl:734
 msgid "fork for 2nd find"
-msgstr ""
+msgstr "For für zweiten Find"
 
 #: scripts/dpkg-source.pl:736
 #, perl-format
@@ -2215,7 +2221,7 @@ msgstr ""
 
 #: scripts/dpkg-source.pl:1169
 msgid "fork for cpio"
-msgstr ""
+msgstr "Fork für Cpio"
 
 #: scripts/dpkg-source.pl:1173
 msgid "reopen gzip for cpio"
@@ -2256,7 +2262,7 @@ msgstr ""
 
 #: scripts/dpkg-source.pl:1248
 msgid "fork for tar -t"
-msgstr ""
+msgstr "Fork für tar -t"
 
 #: scripts/dpkg-source.pl:1252
 msgid "reopen gzip for tar -t"
@@ -2295,7 +2301,7 @@ msgstr ""
 #: scripts/dpkg-source.pl:1326
 #, perl-format
 msgid "tarfile `%s' contains file with name ending in .dpkg-orig"
-msgstr ""
+msgstr "Tardatei »%s« enthält Datei deren Namen auf ».dpkg-orig« endet"
 
 #: scripts/dpkg-source.pl:1331
 #, perl-format
@@ -2305,7 +2311,7 @@ msgstr ""
 #: scripts/dpkg-source.pl:1336
 #, perl-format
 msgid "tarfile `%s' contains object `debian' that isn't a directory"
-msgstr ""
+msgstr "Tardatei »%s« enthält ein Objekt »debian« das kein Verzeichnis ist"
 
 #: scripts/dpkg-source.pl:1345
 #, perl-format
@@ -2318,12 +2324,12 @@ msgstr ""
 #: scripts/dpkg-source.pl:1439
 #, perl-format
 msgid "diff `%s' is missing trailing newline"
-msgstr ""
+msgstr "Diff »%s« fehlt ein abschließender Zeilenumbruch"
 
 #: scripts/dpkg-source.pl:1385
 #, perl-format
 msgid "expected ^--- in line %d of diff `%s'"
-msgstr ""
+msgstr "unerwartes ^--- in Zeile %d des Diffs »%s«"
 
 #: scripts/dpkg-source.pl:1388
 #, perl-format
@@ -2338,46 +2344,46 @@ msgstr ""
 #: scripts/dpkg-source.pl:1395
 #, perl-format
 msgid "diff `%s' finishes in middle of ---/+++ (line %d)"
-msgstr ""
+msgstr "Diff »%s« endet in der Mitte von ---/+++ (Zeile %d)"
 
 #: scripts/dpkg-source.pl:1400 scripts/dpkg-source.pl:1407
 #, perl-format
 msgid "line after --- isn't as expected in diff `%s' (line %d)"
-msgstr ""
+msgstr "Zeile nach --- wird im Diff »%s« (Zeile %d) nicht erwartet"
 
 #: scripts/dpkg-source.pl:1416
 #, perl-format
 msgid "diff `%s' patches something which is not a plain file"
-msgstr ""
+msgstr "Diff »%s« patcht etwas, das keine einfache Datei ist"
 
 #: scripts/dpkg-source.pl:1421
 #, perl-format
 msgid "diff patches file %s twice"
-msgstr ""
+msgstr "Diff patcht Datei %s zweifach"
 
 #: scripts/dpkg-source.pl:1431
 #, perl-format
 msgid "Expected ^@@ in line %d of diff `%s'"
-msgstr ""
+msgstr "Erwartete ^@@ in Zeile %d des Diffs »%s«"
 
 #: scripts/dpkg-source.pl:1437
 #, perl-format
 msgid "unexpected end of diff `%s'"
-msgstr ""
+msgstr "unerwartetes Ende des Diffs »%s«"
 
 #: scripts/dpkg-source.pl:1445
 #, perl-format
 msgid "expected [ +-] at start of line %d of diff `%s'"
-msgstr ""
+msgstr "erwartete [ +-] am Anfang der Zeile %d des Diffs »%s«"
 
 #: scripts/dpkg-source.pl:1450
 #, perl-format
 msgid "expected ^@@ at line %d of diff `%s'"
-msgstr ""
+msgstr "erwartete ^@@ in Zeile %d des Diff »%s«"
 
 #: scripts/dpkg-source.pl:1461
 msgid "fork for tar -xkf -"
-msgstr ""
+msgstr "Fork für tar -xkf -"
 
 #: scripts/dpkg-source.pl:1463
 msgid "reopen gzip for tar -xkf -"
@@ -2463,7 +2469,7 @@ msgstr ""
 
 #: scripts/dpkg-source.pl:1591
 msgid "fork for gzip"
-msgstr ""
+msgstr "Fork für Gzip"
 
 #: scripts/dpkg-source.pl:1593
 msgid "reopen gzip pipe"
@@ -2877,7 +2883,7 @@ msgstr "Schreibfehler bei Steuerdaten (»control data«)"
 
 #: scripts/Dpkg/Shlibs/Objdump.pm:74
 msgid "cannot fork for objdump"
-msgstr "kann nicht für objdump Fork ausführen"
+msgstr "kann keinen Fork für Objdump ausführen"
 
 #: scripts/Dpkg/Shlibs/Objdump.pm:82
 #, perl-format
@@ -3017,7 +3023,7 @@ msgstr "Versionsnummer enthält ungültiges Zeichen »%s«"
 #~ msgstr "die »Source«-Zeile im Quell-Absatz der Steuerinformationsdatei fehlt"
 
 #~ msgid "fork for parse changelog"
-#~ msgstr "forke zum auswerten des changelogs"
+#~ msgstr "forke zum Auswerten des changelogs"
 
 #~ msgid "parse changelog"
 #~ msgstr "werte changelog aus"
