Updated Slovak translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-19  Ivan Masár  <helix84@centrum.sk>
+
+	* sk.po: Updated to 926t1f
+
 2008-03-09  Robert Luberda <robert@debian.org>
 
 	* pl.po: Apply some fixes suggested by Wiktor Wandachowicz.
