--- a/debian/changelog
+++ b/debian/changelog
@@ -91,9 +91,10 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Korean (Changwoo Ryu).
   * Polish (Robert Luberda).
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
   * Swedish (Peter Karlsson).
-  * Thai (Theppitak Karoonboonyanan). Closes: 468916
+  * Thai (Theppitak Karoonboonyanan). Closes: #468916
+  * Slovak (Ivan Masár). Closes: #471342
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
@@ -110,7 +111,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * Polish (Robert Luberda).
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
 
  -- Frank Lichtenheld <djpig@debian.org>  Fri, 29 Feb 2008 18:34:54 +0100
 
@@ -633,7 +634,7 @@ dpkg (1.14.7) unstable; urgency=low
   * German (Sven Joachim). Closes: #440537
   * Nepali (Shiva Prasad Pokharel). Closes: #437825
   * Portuguese (Miguel Figueiredo). Closes: #441113
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
   * Vietnamese (Clytie Siddall). Closes: #440502
   * Korean (Sunjae Park). Closes: #443190
 
