--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-20  Ian Jackson  <ian@davenant.greenend.org.uk>
+
+	* lib/tarfn.c (TarExtractor): Initialize h.LinkName and h.Name to
+	NULL.
+
 2008-03-16  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Shlibs/Objdump.pm: Add "objid" property to
