--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     Thanks to Ian Jackson.
   * Allow compilation with --disable-nls on systems without libintl.h where
     a non glibc claims to be glibc. Closes: #465420
+  * Fix crash when a .deb file becomes unreadable while dpkg is starting.
+    Thanks to Ian Jackson. Closes: #386210
 
   [ Raphael Hertzog ]
   * Add a warning displayed by dpkg-genchanges if the current version is
