--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
-2008-03-19  Ivan Masár  <helix84@centrum.sk>
+2008-03-20  Ivan Masár  <helix84@centrum.sk>
 
-	* sk.po: Updated to 926t1f
+	* sk.po: Updated to 927t
 
 2008-03-09  Robert Luberda <robert@debian.org>
 
