Sort entries in enum pkgstatus
Fix all users that rely on the enum sorting.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2008-03-22  Ian Jackson  <ian@davenant.greenend.org.uk>
+
+	* lib/dpkg-db.h (enum pkgstatus): Sort entries.
+	* lib/dump.c (w_status): Change 'stat_configfiles' to 'stat_installed'
+	in assert as that's the new last item.
+	* src/processarc.c (process_archive): Likewise.
+	* src/packages.c (process_queue): Likewise.
+	(deppossi_ok_found): Match sorting of 'enum pkgstatus'.
+	* dselect/pkgdisplay.cc (statusstrings): Likewise.
+	(statuschars): Likewise.
+	* src/help.c (statusstrings): Likewise.
+	* src/query.c (list1package): Likewise.
+	* lib/parsehelp.c (statusinfos): Likewise.
+
 2008-03-21  Guillem Jover  <guillem@debian.org>
 
 	* lib/parse.c (cu_parsedb): Remove duplicate function.
