Add support for nocheck DEB_BUILD_OPTIONS in debian/rules
So that the dpkg test suite can be skept if desired.

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * Few file descriptor cleanup and error handling fixes.
     Thanks to Ian Jackson. Closes: #443338
   * Move test suite invokation to a new check target in debian/rules.
+  * Add support for nocheck DEB_BUILD_OPTIONS in debian/rules, so that the
+    dpkg test suite can be skept if desired.
 
   [ Raphael Hertzog ]
   * Add a warning displayed by dpkg-genchanges if the current version is
