libdpkg: Remove unused argument from unlockdatabase

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-25  Guillem Jover  <guillem@debian.org>
+
+	* lib/dpkg-db.h (unlockdatabase): Change prototype to not take any
+	argument (as it was not being used). Fix all callers.
+	* lib/lock.c (unlockdatabase): Likewise.
+
 2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>,
             Guillem Jover  <guillem@debian.org>
 
