Move duplicate ensure_package_clientdata functions to src/filesdb.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-03-25  Guillem Jover  <guillem@debian.org>
 
+	* src/main.h (ensure_package_clientdata): Move prototype to ...
+	* src/filesdb.h: ... here.
+	* src/help.c (ensure_package_clientdata): Move function to ...
+	* src/filesdb.c: ... here.
+	* src/query.c: Remove duplicate function.
+
+2008-03-25  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-db.h (unlockdatabase): Change prototype to not take any
 	argument (as it was not being used). Fix all callers.
 	* lib/lock.c (unlockdatabase): Likewise.
