--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-03-25  Guillem Jover  <guillem@debian.org>
+
+	* lib/dbmodify.c (log_file, log_message): Move to ...
+	* lib/log.c: ... here. New file.
+	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'log.c'.
+	* lib/dpkg-db.h (log_file, log_message): Move declaration to ...
+	* lib/dpkg.h: ... here.
+
 2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>,
             Guillem Jover  <guillem@debian.org>
 
