libdpkg: Add new modstatdb_note_ifwrite function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>
 
+	* lib/dpkg-db.h (modstatdb_note_ifwrite): New prototype.
+	* ib/dbmodify.c (modstatdb_note_ifwrite): New function.
+
+2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>
+
 	* src/archives.c (archivefiles): Call log_message.
 	* src/configure.c (deferred_configure): Likewise.
 	* src/packages.c (packages): Likewise.
